force-app/main/default/objects/User/fields/Analytics_Admin__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analytics Admin</label>
    <type>Checkbox</type>
</CustomField>