force-app/main/default/objects/User/fields/Circle__c.field-meta.xml
<CustomField>
    <fullName>Circle__c</fullName>
    <label>Circle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>KK</fullName>
            </value>
            <value>
                <fullName>MUM</fullName>
            </value>
            <value>
                <fullName>KTN</fullName>
            </value>
            <value>
                <fullName>RAJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>