force-app/main/default/objects/User/fields/PM_Hierarchy_Role_Type__c.field-meta.xml
<CustomField>
    <fullName>PM_Hierarchy_Role_Type__c</fullName>
    <formula>IF(CONTAINS( UserRole.Name,&apos;CCE&apos;),&apos;CCE&apos;, IF(CONTAINS( UserRole.Name,&apos;CPH&apos;),&apos;CPH&apos;, IF(CONTAINS( UserRole.Name,&apos;PM-TL&apos;),&apos;PM-TL&apos;,  IF(CONTAINS( UserRole.Name,&apos;PM&apos;),&apos;PM&apos;,&apos;&apos;) ) ))</formula>
    <label>PM Hierarchy Role Type</label>
    <type>Text</type>
</CustomField>