force-app/main/default/objects/User/validationRules/Mobile_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Required</fullName>
    <active>true</active>
    <description>Mobile number is mandatory to make OFT check working</description>
    <errorConditionFormula>ISBLANK(MobilePhone) &amp;&amp;  Profile.Name = &apos;Sales&apos;</errorConditionFormula>
    <errorMessage>Mobile Phone is Mandatory</errorMessage>
</ValidationRule>